# Industrial-Energy-Synth

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  EQ_TZ.md  IES_QA.md  README.md  RELEASE_NOTES.md  ROADMAP.md  ROADMAP_V2.md
Source/: Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Util/: Math.h
Source/dsp/: DestroyChain.h  FxChain.h  Lfo.h  PolyBlepOscillator.h  SvfFilter.h  ToneEQ.h  WaveShaper.h  WavetableSet.h
Source/engine/: MonoSynthEngine.cpp  MonoSynthEngine.h  NoteStackMono.h
Source/presets/: PresetManager.cpp  PresetManager.h
Source/ui/: AdsrPreview.cpp  AdsrPreview.h  FutureHub.cpp  FutureHub.h  I18n.h  IndustrialLookAndFeel.cpp  IndustrialLookAndFeel.h  LabKeyboardComponent.h  LevelMeter.cpp  LevelMeter.h  ModSourceBadge.h  ParamComponents.cpp  ParamComponents.h  ShaperEditor.cpp  ShaperEditor.h  SpectrumEditor.cpp  SpectrumEditor.h  WavePreview.cpp  WavePreview.h
scripts/: build-win.ps1  clean-build.ps1  install-vst3.ps1
tests/: NoteStackMonoTests.cpp
